price table bullet spacing issue fixed

--- a/assets/css/widgets/price-table.css
+++ b/assets/css/widgets/price-table.css
@@ -126,3 +126,8 @@ span.currency-inner-wrapper span.ua-price-table__currency_sep {
     color: #efefef;
 }
 .ua-element.ua-element-price-table .ua-button{text-decoration: none;}
+.mc-price-table__feature-inner {
+    display: flex;
+    column-gap: 10px;
+    align-items: center;
+}
